<resources>
    <string name="app_name">EarthQuakes</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="earthquakes_url">http://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/all_hour.geojson</string>
    <string name="title_activity_detail">EarthQuake Detail</string>
    <string name="title_activity_setting">Settings</string>

    <string name="num_earth_Quakes">%d eartquakes processed</string>
    <string name="earthquakes_refresh">Refresh</string>
    <string name="earthquakes_filter">Filters</string>

    <string name="AUTO_REFRESH">Auto refresh</string>
    <string name="FREQUENCE_LIST">Frequence list</string>

    <string name="auto_refresh_title">Auto</string>
    <string name="auto_refresh_description">Enable/Disable auto refresh</string>

    <string name="INTERVAL_LIST">interval_update_list</string>
    <string name="interval_list">Interval</string>
    <string name="interval_list_sumary">Select interval</string>

    <string name="MAGNITUDE_LIST">magnitude_list</string>
    <string name="magnitude_list">Magnitude</string>
    <string name="magnitude_list_sumary">Select minimun magnitude</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="earthquakes_view">earthquakes_view</string>

    <string name="VIEW_LIST">View_list</string>
    <string name="view_list">View</string>
    <string name="view_list_sumary">Select view</string>
    <string name="tab_list">List</string>
    <string name="tab_map">Map</string>
    <string name="action_refresh">action_refresh</string>

</resources>
